# netifstat

./: README.md  build.sh  kgx-theme-switcher.c  kgx-theme-switcher.css  kgx-theme-switcher.h  meson.build  netif-widget.c  netif-widget.h  netifstat.c  netifstat.gresource.xml
